Bug 132051 - Crash with Skia when resize Draw window (debug build)
Summary: Crash with Skia when resize Draw window (debug build)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords: haveBacktrace
: 132197 132333 (view as bug list)
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-04-11 18:02 UTC by Regina Henschel
Modified: 2020-04-23 10:23 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
VS 2019 Call Stack (6.28 KB, text/plain)
2020-04-11 18:02 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2020-04-11 18:02:55 UTC
Created attachment 159494 [details]
VS 2019 Call Stack

Enable Skia. In start window start new Draw document by clicking on the icon in the left column.
Drag the right edge of the Draw document window to resize it. => Crash.
Sometimes it crashes already, if I want to start a new Draw document.

It does not crash with the other modules.

I get the crash in my clean build Version: 7.0.0.0.alpha0+ (x64)
Build ID: f2a111cc714eaa45f1884299f28a96cd806e1a99
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Vulkan; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: CL

It is OK in Version: 7.0.0.0.alpha0+ (x64)
Build ID: b1da67699bd05b26ee11460347ca7077d366c2fc
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Vulkan; VCL: win; 
Locale: de-DE (en_US); UI-Language: en-US
Calc: CL
Comment 1 Roman Kuznetsov 2020-04-12 11:55:17 UTC
no crash in

Version: 7.0.0.0.alpha0+ (x64)
Build ID: b0b9d736fb9ed73e849f80800916466868dbce28
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded

build from 12 April 2020
Comment 2 Regina Henschel 2020-04-12 12:37:33 UTC
To be clear, my build has --enable-debug. Roman, yours too? If not, it might be a problem for debug builds only.
Comment 3 Roman Kuznetsov 2020-04-12 12:45:45 UTC
(In reply to Regina Henschel from comment #2)
> To be clear, my build has --enable-debug. Roman, yours too? If not, it might
> be a problem for debug builds only.

No, I use the builds from @77 thinderbox
Comment 4 V Stuart Foote 2020-04-12 15:48:54 UTC
Can not confirm with non-debug TB77 Win x64 build for 2020-04-12
Windows 10 Home 64-bit en-US with Intel HD Graphics 620 (Driver Version	26.20.100.7985) and the new LibreOffice skia.log showing:
RenderMethod: vulkan
Vendor: 0x8086
Device: 0x5916
API: 1.2.131
Driver: 0.401.3889
DeviceType: integrated
DeviceName: Intel(R) HD Graphics 620
Blacklisted: no

Version: 7.0.0.0.alpha0+ (x64)
Build ID: b0b9d736fb9ed73e849f80800916466868dbce28
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win; 
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 5 Xisco Faulí 2020-04-15 14:41:56 UTC
Doesn't crash in

Version: 7.0.0.0.alpha0+ (x64)
Build ID: 94a7ceae287a7967e8f013d012673e26637c6bb5
CPU threads: 16; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win; 
Locale: en-GB (en_GB); UI-Language: en-US
Calc: threaded

@Lubos, Do you reproduce this on your end ?
Comment 6 Luboš Luňák 2020-04-15 17:41:58 UTC
This is specific to Vulkan and dbgutil build, triggered by 3078b88e7cc9f1f8d8db14d697af40eb61223e82. I'm waiting for a reaction from Skia people whether this is my or their problem.
Comment 7 Luboš Luňák 2020-04-20 11:55:23 UTC
*** Bug 132197 has been marked as a duplicate of this bug. ***
Comment 8 Commit Notification 2020-04-21 08:03:57 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6c559b122add7db32b06faa15854df58b30460f6

work around copy-to-self SkSurface::draw() being buggy (tdf#132051)

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Regina Henschel 2020-04-22 21:24:50 UTC
It does not crash any longer. Also the crash when using the scroll bar is gone.

Tested with a debug-build.
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 688a520111a2dd3ab4cb3b846b561936d8a887bf
CPU threads: 8; OS: Windows 10.0 Build 18362; UI render: Skia/Vulkan; VCL: win; 
Locale: de-DE (en_US); UI-Language: en-US
Calc: CL
Comment 10 Luboš Luňák 2020-04-23 10:23:55 UTC
*** Bug 132333 has been marked as a duplicate of this bug. ***