work around copy-to-self SkSurface::draw() being buggy (tdf#132051)

This may become the actual fix or may be removed later depending
on the outcome of
https://groups.google.com/d/msgid/skia-discuss/202004151937.05051.l.lunak%40collabora.com .

Change-Id: I709f3e7bffbe86ddb2f6d75724bf30e4b0f0116e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/92587
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>